# claude-knowledge-graph

./: CLAUDE.md  README.md  pyproject.toml
src/claude_knowledge_graph/: cli.py  codex_hook.py  config.py  hooks.py  obsidian_writer.py  project_context.py  qa_logger.py  qwen_processor.py
tests/: test_hooks.py  test_obsidian_writer.py  test_qa_logger.py
