[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-knowledge-graph"
version = "0.1.0"
description = "Auto-capture Claude Code, Gemini CLI & Codex CLI Q&A → Qwen tagging → Obsidian knowledge graph"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Yunwoo Nam" }]
keywords = ["claude", "obsidian", "knowledge-graph", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = ["openai>=1.0", "click>=8.0", "tomli>=2.0; python_version < '3.11'"]

[project.optional-dependencies]
graph = ["networkx", "matplotlib", "numpy"]
download = ["huggingface-hub"]

[project.scripts]
ckg = "claude_knowledge_graph.cli:main"

[project.urls]
Homepage = "https://github.com/yunwoonam/claude-knowledge-graph"
Issues = "https://github.com/yunwoonam/claude-knowledge-graph/issues"
